fix errores en la imagen de docker para spark 2